kubernetes/v1.20.2/containerd/v1.4.0/calico/default/README.md
# Kubernetes v1.20.2 with containerd v1.4.0, calico

| type | image | note |
| ---- | ----- | ---- |
| dqd | ghcr.io/ctrsploit/kubernetes-v1.20.2_containerd-v1.4.0_calico:latest | point to v0.1.0 |
| dqd | ghcr.io/ctrsploit/kubernetes-v1.20.2_containerd-v1.4.0_calico:v0.1.0 | migrate from docker_archive |
| dqd | ssst0n3/docker_archive:kubernetes-v1.20.2-calico_v0.1.0 | source |
| ctr | ghcr.io/ctrsploit/kubernetes-v1.20.2_containerd-v1.4.0_calico:ctr_v0.1.0 | - |
| ctr | ssst0n3/docker_archive:ctr_kubernetes-v1.20.2-calico_v0.1.0 | source |

## usage

### Start and connect

Recommended:

```shell
$ dqd up kubernetes/v1.20.2/containerd/v1.4.0/calico/default
$ ssh dqd-kubernetes-v1.20.2_containerd-v1.4.0_calico
```

Fallback without dqd CLI or SSH config:

```shell
$ cd kubernetes/v1.20.2/containerd/v1.4.0/calico/default
$ docker compose -f docker-compose.yml -f docker-compose.kvm.yml up -d
$ ./ssh
```

### built-in pods

```shell
root@kubernetes-1-20-2-containerd-1-4-0:~# kubectl get pods -A
NAMESPACE         NAME                                                         READY   STATUS    RESTARTS   AGE
calico-system     calico-kube-controllers-7c997dbf59-7fmm6                     1/1     Running   1          33m
calico-system     calico-node-9lx7n                                            1/1     Running   2          33m
calico-system     calico-typha-9cf667d8b-97h95                                 1/1     Running   2          33m
kube-system       coredns-74ff55c5b-ldvd5                                      1/1     Running   1          98m
kube-system       coredns-74ff55c5b-lnzmm                                      1/1     Running   1          98m
kube-system       etcd-kubernetes-1-20-2-containerd-1-4-0                      0/1     Running   2          98m
kube-system       kube-apiserver-kubernetes-1-20-2-containerd-1-4-0            1/1     Running   2          98m
kube-system       kube-controller-manager-kubernetes-1-20-2-containerd-1-4-0   0/1     Running   2          98m
kube-system       kube-proxy-c59st                                             1/1     Running   2          98m
kube-system       kube-scheduler-kubernetes-1-20-2-containerd-1-4-0            0/1     Running   2          98m
tigera-operator   tigera-operator-587b8f5c8f-lm5gr                             1/1     Running   1          33m
```

### versions

```shell
root@kubernetes-1-20-2-containerd-1-4-0:~# helm version
version.BuildInfo{Version:"v3.5.0", GitCommit:"32c22239423b3b4ba6706d450bd044baffdcf9e6", GitTreeState:"clean", GoVersion:"go1.15.6"}
root@kubernetes-1-20-2-containerd-1-4-0:~# kubectl version
Client Version: version.Info{Major:"1", Minor:"20", GitVersion:"v1.20.2", GitCommit:"faecb196815e248d3ecfb03c680a4507229c2a56", GitTreeState:"clean", BuildDate:"2021-01-13T13:28:09Z", GoVersion:"go1.15.5", Compiler:"gc", Platform:"linux/amd64"}
Server Version: version.Info{Major:"1", Minor:"20", GitVersion:"v1.20.2", GitCommit:"faecb196815e248d3ecfb03c680a4507229c2a56", GitTreeState:"clean", BuildDate:"2021-01-13T13:20:00Z", GoVersion:"go1.15.5", Compiler:"gc", Platform:"linux/amd64"}
root@kubernetes-1-20-2-containerd-1-4-0:~# containerd --version
containerd github.com/containerd/containerd v1.4.0 09814d48d50816305a8e6c1a4ae3e2bcc4ba725a
root@kubernetes-1-20-2-containerd-1-4-0:~# runc --version
runc version 1.0.0-rc92
spec: 1.0.2-dev
root@kubernetes-1-20-2-containerd-1-4-0:~# cat /etc/os-release
NAME="Ubuntu"
VERSION="20.04.6 LTS (Focal Fossa)"
ID=ubuntu
ID_LIKE=debian
PRETTY_NAME="Ubuntu 20.04.6 LTS"
VERSION_ID="20.04"
HOME_URL="https://www.ubuntu.com/"
SUPPORT_URL="https://help.ubuntu.com/"
BUG_REPORT_URL="https://bugs.launchpad.net/ubuntu/"
PRIVACY_POLICY_URL="https://www.ubuntu.com/legal/terms-and-policies/privacy-policy"
VERSION_CODENAME=focal
UBUNTU_CODENAME=focal
root@kubernetes-1-20-2-containerd-1-4-0:~# uname -a
Linux kubernetes-1-20-2-containerd-1-4-0 5.4.0-216-generic #236-Ubuntu SMP Fri Apr 11 19:53:21 UTC 2025 x86_64 x86_64 x86_64 GNU/Linux
```

## build

```shell
make all ENV=kubernetes/v1.20.2/containerd/v1.4.0/calico/default
```

GitHub Actions builds the `ctr` image with `CI_DQD_BUILDER=dqd/cgroup-v1-builder` because Kubernetes v1.20.2 kubelet requires cgroup v1.

## for developers

```dockerfile
# syntax=docker/dockerfile:1-labs
FROM ghcr.io/ctrsploit/kubernetes-v1.20.2_containerd-v1.4.0_init:ctr_v0.1.0
...
RUN --security=insecure ["/bin/sh", "-c", "cat /dev/kmsg 2>/dev/null & exec /sbin/init --log-target=kmsg"]
```

* build logs (systemd + init.sh, written to `/dev/kmsg`) are surfaced to the build log via a backgrounded `cat /dev/kmsg`; use `dmesg -w` only when debugging interactively.
* use systemd service to execute commands.
* ssh root/root 10.0.2.16 to debug.

## Tricks

### cgroup v1

Kubernetes v1.20.2 kubelet only supports cgroup v1. On GitHub-hosted runners, this env declares `CI_DQD_BUILDER=dqd/cgroup-v1-builder`, so CI starts that dqd runtime and runs the `ctr` build there before continuing the VM and DQD image build on the host runner.

### cache mount

This build uses a BuildKit cache mount for containerd snapshots so the calico install writes under an ext4-backed cache instead of overlayfs-on-overlayfs.

### pin buildkit to v0.30.0

`build.sh` pins `BUILDX_IMAGE="moby/buildkit:v0.30.0"`. BuildKit v0.31 moved to runc v1.3, which masks `/proc/acpi` and is rejected by the cgroup-v1-builder VM's kernel 5.4; v0.30.0 keeps the older runc that allows `/proc/acpi`.
